# fed-rates-wayback

./: .env.example  .gitignore  README.md  pyproject.toml  v2_plan.md
configs/events/: fomc_2025_03.yaml  fomc_2025_06.yaml  fomc_2025_09.yaml  fomc_2025_12.yaml  fomc_2026_03.yaml  fomc_2026_06.yaml  fomc_2026_07_live.yaml
docs/: architecture.mmd  deployment_plan.md  event_configuration.md  requirements_coverage.md  test_plan.md
docs/plans/: implementation_plan.md  roadmap.md
docs/wiki/: Audit-and-reproducibility.md  CLI-usage.md  Data-sources.md  Home.md  How-the-pipeline-works.md  Limitations-and-roadmap.md  What-the-project-does.md  _Sidebar.md
fixtures/fomc_2026_06/: alfred_observations.json  fed_documents.json  gdelt_articles.json  polymarket_event.json  rates_observations.json
frp/: __init__.py  api.py  cli.py  core.py
tests/: test_live_fred.py  test_pipeline.py
